# Jility

./: .dockerignore  .gitignore  .mcp.json  API.md  AUTHENTICATION_IMPLEMENTATION.md  BUILD_GUIDE.md  Cargo.toml  DELIVERABLES.md  DEV_SCRIPT_USAGE.md  DOCKER.md  FRONTEND_COMPLETE.md  MCP_SERVER_TESTING.md  NGROK_SETUP.md  PHASE_3_COMPLETE.md  PROJECT_IMPLEMENTATION_COMPLETE.md  README.md  SEARCH_DOCUMENTATION.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SERVER_QUICK_START.md  SPRINT_MANAGEMENT_IMPLEMENTATION.md  Taskfile.yml  create-roadmap-tickets.ts  dev.sh  docker-compose.ngrok.yml  docker-compose.yml  run.sh  start-ngrok.sh  test-bcrypt.js  test-results-sprint-filter-2025-11-08.md
.claude/: CLAUDE.md
.claude/agents/: design-reviewer.md
crates/jility-cli/: Cargo.toml
crates/jility-cli/src/: main.rs
crates/jility-cli/src/commands/: init.rs  mod.rs  ticket.rs  user.rs
crates/jility-cli/src/output/: mod.rs
crates/jility-core/: Cargo.toml
crates/jility-core/src/: error.rs  lib.rs  search.rs
crates/jility-core/src/db/: connection.rs  mod.rs
crates/jility-core/src/entities/: api_key.rs  commit_link.rs  mod.rs  project.rs  saved_view.rs  session.rs  sprint.rs  sprint_ticket.rs  ticket.rs  ticket_assignee.rs  ticket_change.rs  ticket_dependency.rs  ticket_label.rs  user.rs  workspace.rs  workspace_invite.rs  workspace_member.rs
crates/jility-core/src/migration/: m20241024_000001_create_initial_schema.rs  m20241024_000002_add_fts.rs  m20241024_000003_add_auth_tables.rs  m20241024_000004_extend_projects.rs  m20241024_000005_fix_fts_triggers.rs  m20250109_000001_add_epic_support.rs  m20251106_000001_add_workspaces.rs  m20251108_000001_fix_comments_fts.rs  m20251109_000001_add_ticket_soft_delete.rs  m20251110_000001_add_sprint_capacity.rs  mod.rs
crates/jility-core/src/models/: mod.rs
crates/jility-core/src/storage/: mod.rs
crates/jility-core/src/types/: mod.rs
crates/jility-core/src/utils/: slug.rs
crates/jility-mcp/: Cargo.toml
crates/jility-mcp/src/: lib.rs  main.rs  params.rs  server.rs  service.rs  service.rs.bak
crates/jility-server/: Cargo.toml
crates/jility-server/src/: main.rs
docs/: AI_CODE_INSPECTIONS_DESIGN.md  AI_CODE_INSPECTIONS_SPEC.md  EPIC_SUPPORT.md  MOBILE_TEST_REPORT.md  database-schema-design.md  jility-cli-collaboration-guide.md  jility-project-plan.md  jility-wireframes.html  mcp-protocol-design.md  versioning-system-design.md
docs/api/: API.md
docs/features/: sprint-planning.md
docs/guides/: QUICK_REFERENCE.md  QUICK_START.md  SPRINT_QUICK_START.md  USER_GUIDE.md
docs/implementation/: CLI_IMPLEMENTATION_SUMMARY.md  DATABASE_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.txt  IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETE.md  SERVER_IMPLEMENTATION_SUMMARY.md  SPRINT_FILES_SUMMARY.md
docs/plans/: 2025-01-24-mobile-first-redesign.md  2025-10-24-dev-startup-script-design.md  2025-10-24-dev-startup-script.md  2025-11-06-github-markdown-editor.md  2025-11-06-workspace-member-management.md  2025-11-06-workspace-multi-tenancy-design.md  2025-11-06-workspace-multi-tenancy-implementation.md  2025-11-06-workspace-url-restructure.md  2025-11-07-feature-roadmap.md  2025-11-07-ticket-assignee-ui-implementation.md  2025-11-07-ticket-assignee-ui.md  2025-11-08-board-active-sprint-filter.md  2025-11-08-configurable-sprint-capacity.md  2025-11-08-jility-roadmap-implementation.md  2025-11-08-sprint-planning-fix.md  2025-11-08-sprint-rollover.md  2025-11-09-foundation-and-epic-sprint-design.md  2025-11-09-foundation-epic-sprint.md  2025-11-10-polish-and-fix-sprint.md  2025-11-15-ticket-status-selector-design.md  backend-migration-sprint-capacity.md
docs/testing/: TESTING.md
jility-core/: Cargo.toml
jility-core/src/: error.rs  lib.rs
jility-core/src/entities/: api_key.rs  comment.rs  commit_link.rs  mod.rs  saved_view.rs  session.rs  sprint.rs  ticket.rs  ticket_assignee.rs  ticket_change.rs  ticket_dependency.rs  ticket_label.rs  user.rs
jility-core/src/search/: mod.rs  service.rs  types.rs
jility-server/: Cargo.toml  Dockerfile  README.md
jility-server/src/: error.rs  main.rs  state.rs
jility-server/src/api/: activity.rs  auth.rs  comments.rs  dependencies.rs  epics.rs  git.rs  mod.rs  projects.rs  search.rs  sprints.rs  tickets.rs  workspaces.rs
jility-server/src/auth/: middleware.rs  mod.rs  service.rs
jility-server/src/models/: request.rs  response.rs
jility-server/src/services/: member.rs  mod.rs  workspace.rs
jility-server/src/websocket/: mod.rs
jility-web/: .dockerignore  .env.example  .env.local.example  .env.ngrok  .gitignore  Dockerfile  FILES_CREATED.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  THEME_GUIDE.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
jility-web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
jility-web/app/backlog/: page.tsx
jility-web/app/board/: page.tsx
jility-web/app/login/: page.tsx
jility-web/app/profile/: page.tsx
jility-web/app/register/: page.tsx
jility-web/app/search/: page.tsx
jility-web/components/: command-palette.tsx  create-workspace-dialog.tsx  epic-card.tsx  theme-switcher.tsx  workspace-switcher.tsx
jility-web/components/backlog/: backlog-section.tsx  backlog-ticket-item.tsx  backlog-toolbar.tsx  backlog-view.tsx  quick-add-input.tsx
jility-web/components/board/: epic-filter.tsx  sprint-filter.tsx
jility-web/components/epic/: create-epic-dialog.tsx
jility-web/components/kanban/: board.tsx  column.tsx  ticket-card.tsx
jility-web/components/layout/: mobile-bottom-nav.tsx  mobile-fab.tsx  navbar.tsx
jility-web/components/projects/: project-form-dialog.tsx  project-switcher.tsx
jility-web/components/search/: search-bar.tsx
jility-web/components/settings/: api-keys-tab.tsx  profile-tab.tsx  projects-tab.tsx  sessions-tab.tsx  (+1 more)
jility-web/lib/: api.ts  auth-context.tsx  hooks.ts  project-context.tsx  sprint-utils.ts  types.ts  use-sprint-capacity.ts  utils.ts  websocket.ts  with-auth.tsx  workspace-context.tsx
wireframes/: jility-mobile-wireframesv1.html  jility-wireframesv3.html  jility-wireframesv4.html
(+40 files in other folders)
