[workspace]

[package]
name = "jility-server"
version = "0.1.0"
edition = "2021"
authors = ["Jility Team"]
license = "MIT"

[[bin]]
name = "jility-server"
path = "src/main.rs"

[dependencies]
# Core library
jility-core = { path = "../crates/jility-core" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs and time
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
http = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
rand = "0.8"
sha2 = "0.10"
