[package]
name = "jility-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "jility"
path = "src/main.rs"

[[bin]]
name = "jility-reset-password"
path = "src/bin/jility-reset-password.rs"

[dependencies]
jility-core = { path = "../jility-core" }
jility-mcp = { path = "../jility-mcp" }
clap = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bcrypt = "0.15"
dirs = "5.0"
sea-orm = { workspace = true }
