[package]
name = "jility-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "jility-mcp"
path = "src/main.rs"

[dependencies]
# MCP
rmcp = { version = "0.1", features = ["macros", "server"] }
schemars = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# Utilities
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
