[package]
name = "jility-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "jility-server"
path = "src/main.rs"

[dependencies]
# Core
jility-core.workspace = true

# Web server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Utilities
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
